# MiniGPT

./: .gitignore  README.md  generate.py  pyproject.toml  train.py
LLMZero/: Attention.py  MiniGPT.py  Tokenizer.py  __init__.py  attention.py  config.py  dataset_from_token.py  mini_gpt.py  tokeniz.py
data/: README.md  dataset.txt
